# CMakeDemo

./: CMakeLists.txt  README.md
core-sdk/: CMakeLists.txt
core-sdk-demo/: CMakeLists.txt
core-sdk-demo/src/: main.cpp
core-sdk-demo/src/test/: Test.cpp  Test.h
core-sdk/src/api/: CoreSdk.cpp  CoreSdk.h  README.md
core-sdk/src/user/: User.cpp  User.h
libs/: README.md
modules/: README.md
