#############################################################################
# 开始 自定义项目配置
#############################################################################
set(_T_CURRENT_PATH "${PROJECT_SOURCE_DIR}/core-sdk")

# 查找当前目录下的所有源文件，
# 并将名称保存到_T_SOURCES目录
#aux_source_directory(. _T_SOURCES)

# 库名
set(_T_LIB_NAME CoreSdk)

# 头文件目录
set(_T_HEADERS_DIRECTORIES "${_T_CURRENT_PATH}/src" "${_T_CURRENT_PATH}/src/user" "${PROJECT_SOURCE_DIR}/modules/include")
# 源码：下面二选一
#set(_T_SOURCES ${_T_CURRENT_PATH}/src/CoreSdk.cpp ${_T_CURRENT_PATH}/src/user/User.cpp)
file(GLOB_RECURSE _T_SOURCES "${_T_CURRENT_PATH}/src/*.cpp")

# 开放headers
file(GLOB_RECURSE _T_API_HEADERS "${_T_CURRENT_PATH}/src/api/*.h")
#############################################################################
# 结束 自定义项目配置
#############################################################################




#############################################################################
# 开始 目录配置
#############################################################################
# 头文件目录
foreach(_ITEM ${_T_HEADERS_DIRECTORIES})
    include_directories(${_ITEM})
endforeach(_ITEM)

# 库文件输出目录
set(LIBRARY_OUTPUT_PATH ${_T_CURRENT_PATH}/libs)
#############################################################################
# 结束 目录配置
#############################################################################




#############################################################################
# 开始 动态库配置
#############################################################################
add_library(${_T_LIB_NAME}_shared SHARED ${_T_SOURCES})

# 修改生成的库名
set_target_properties(${_T_LIB_NAME}_shared PROPERTIES OUTPUT_NAME "${_T_LIB_NAME}")
#############################################################################
# 结束 动态库配置
#############################################################################




#############################################################################
# 开始 静态库配置
#############################################################################
add_library(${_T_LIB_NAME}_static STATIC ${_T_SOURCES})

# 修改生成的库名
set_target_properties(${_T_LIB_NAME}_static PROPERTIES OUTPUT_NAME "${_T_LIB_NAME}")
#############################################################################
# 结束 静态库配置
#############################################################################




#############################################################################
# 开始 将API headers文件复制至../libs/include
#############################################################################
file(COPY ${_T_API_HEADERS} DESTINATION "${_T_CURRENT_PATH}/libs/include")
#############################################################################
# 结束 静态库配置
#############################################################################
